--- a/src/style/home-styles.css
+++ b/src/style/home-styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .HeroImage {
     width: 100vw;
@@ -10,6 +11,7 @@
     align-items: center;
     color: white;
     margin-bottom: 10px;
+    
 }
 
 h2 {
@@ -18,6 +20,7 @@ h2 {
 
 .HeroImage h1 {
     margin-bottom: 150px;
+    font-family: 'Asap', sans-serif;
 }
 
 .CountryDisplayTitle {
@@ -46,32 +49,16 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* align-items: center; */
-    /* max-width: 89vw; */
     margin: 20px 5vw 0 5vw;
     border-radius: 30px;
-    /* padding: 0px 16px 40px 16px; */
     background-color: white;
 }
 
 .RandomCountryImage {
     height: 220px;
-    /* width: 42vh; */
     border-radius: 30px 30px 0 0;
-    /* vertical-align: middle; */
     margin: 0 -16px 0 -16px;
-    /* align-self: stretch; */
 }
-
-/* .CountryDisplayBox h4 {
-    margin-top: 10px;
-    justify-content: flex-start;
-} */
-
-/* .CountryDisplayBox div {
-    display: flex;
-    gap: 8px;
-} */
 
 .CountryDisplayInfo {
     display: flex;
@@ -100,7 +87,6 @@ h2 {
     align-items: center;
     justify-content: center;
     font-size: 1rem;
-    /* margin-top: 20px; */
     background-color: #e3fbec;
     color: #44915e;
     padding: 7px 16px 7px 16px;
@@ -135,7 +121,6 @@ h2 {
     align-items: center;
     justify-content: center;
     position: absolute;
-    /* top: 95px; */
     right: 16px;
     bottom: 168px;
     z-index: 2;
@@ -147,7 +132,3 @@ h2 {
     background: rgba(137, 137, 137, 0.4);
     cursor: pointer;
 }
-
-/* .ReviewsHolder {
-    margin: 0 20px 30px 20px;
-} */
