--- a/src/style/reviews-modal-styles.css
+++ b/src/style/reviews-modal-styles.css
@@ -15,8 +15,6 @@
 .InputElements {
     display: flex;
     flex-direction: column;
-    /* text-align: left; */
-    /* margin: 0 20px 0 20px; */
 }
 
 .reviews-modal-content {
@@ -26,11 +24,9 @@
     width: 70vw;
     min-height: 55vh;
     padding: 20px;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     position: relative;
-    /* text-align: center; */
-    /* margin: 0 40px; */
 }
 
 
@@ -45,7 +41,7 @@
     font-size: 12px;
     font-weight: 400;
     color: #646668;
-    text-align: left;
+    text-align: justify;
     margin: 12px 20px 12px 20px;
 }
 
@@ -56,19 +52,17 @@
     margin: 0vh 5vw 0vh 5vw;
 }
 
-.reviews-modal-content button {
-    /* position: absolute; */
-    /* top: 10px; */
-    /* right: 10px; */
+.PublishButtonReview {
     background: #544EEE;
     color: #FFFFFF;
     border: none;
     padding: 7px 16px;
     cursor: pointer;
-    border-radius: 5px;
-    /* margin-top: 30px; */
+    border-radius: 10px;
     margin: 0 2vh;
     text-align: center;
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 .ExperienceInput {
@@ -78,17 +72,33 @@
     color: #15141B;
     padding: 7px 16px;
     margin-bottom: 16px;
+    font-size: 14px;
+}
+
+.ExperienceInput::placeholder {
+    color:#AAACAE;
 }
 
 .reviews-modal-content textarea {
     height: 100px;
     border: #D2D4D6 1px solid;
     background-color: #F6F6F6;
-    font-size: 16px;
+    font-size: 14px;
     color: #15141B;
     font-weight: 600;
     border-radius: 10px;
     padding: 7px 16px;
     margin: 12px 5vw 24px 5vw;
     resize: vertical;
+}
+
+.reviews-modal-content textarea::placeholder {
+    color: #AAACAE;
+}
+
+.CloseButtonReview {
+    position: absolute;
+    top: 15px;
+    left: 10px;
+    background-color: transparent;
 }
