--- a/src/style/userpage-styles.css
+++ b/src/style/userpage-styles.css
@@ -17,11 +17,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 10px;
+    gap: 8px;
     background-color: #FFFFFF;
     border-radius: 20px;
-    padding: 7px 16px;
-    height: 100px;
+    padding: 12px 16px;
+    height: auto;
 }
 
 .DetailsContainer p {
