Added images for all european countries and storing review works.

--- a/src/style/countrydetails-styles.css
+++ b/src/style/countrydetails-styles.css
@@ -127,8 +127,8 @@ h2 {
 }
 
 .ReviewsCard {
-    background-color: #FFFFFF;
-    margin: 0 5vw 20px 5vw;
+    /* background-color: #FFFFFF; */
+    /* margin: 0 5vw 20px 5vw; */
     border-radius: 30px;
 }
 
