--- a/src/style/countrydetails-styles.css
+++ b/src/style/countrydetails-styles.css
@@ -146,3 +146,7 @@ h2 {
     background: rgba(137, 137, 137, 0.4);
     cursor: pointer;
 }
+
+.FavoritesIconSelected {
+    background-color: #544EEE;
+}
