--- a/src/style/userpage-styles.css
+++ b/src/style/userpage-styles.css
@@ -1,3 +1,5 @@
+@media only screen and (max-width: 768px) {
+
 .UserPageContainer {
     margin: 100px 20px 0 20px;
     min-height: 78.5vh;
@@ -54,4 +56,242 @@
 
 .EditButton {
     display: flex;
+}
+
+.ReviewItem {
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 8px;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    padding: 12px 16px;
+    height: auto;
+}
+
+.UserReviewsContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-bottom: 30px;
+}
+
+.UserReviewsContainer p {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.UserReviewsContainer span {
+    color: #646668;
+    font-weight: 400;
+}
+
+.UserReviewsContainer h3 {
+    font-size: 20px;
+}
+
+.BucketListItem {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    padding: 12px 16px;
+    height: auto; 
+}
+
+.CountryDetailsContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-bottom: 30px;
+}
+
+.CountryDetailsContainer h3 {
+    font-size: 20px;
+    /* font-weight: 500; */
+}
+
+.DeleteFavoriteButton {
+    height: 24px;
+}
+
+.BucketListItemEmpty {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    /* text-align: center; */
+    gap: 8px;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    padding: 12px 16px;
+    height: auto;     
+}
+
+.BucketListItemEmpty p {
+    font-size: 18px;
+    color: #15141B;
+    font-weight: 500;
+}
+
+}
+
+@media only screen and (min-width: 769px) {
+    .UserPageContainer {
+        margin: 120px 10vw 0 10vw;
+        min-height: 78.5vh;
+    }
+    
+    .UserPageContainer h1 {
+        margin: 0px 0px 0px 0px;
+        text-align: left;
+        font-size: 50px;
+    }
+    
+    .UserPageContainer h2 {
+        margin: 32px 0px 16px 0px;
+        color: #15141B;
+        font-size: 2rem;
+    }
+    
+    .DetailsContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 8px;
+        background-color: #FFFFFF;
+        border-radius: 20px;
+        padding: 12px 16px;
+        height: auto;
+    }
+    
+    .DetailsContainer p {
+        font-size: 18px;
+        font-weight: 500;
+    }
+    
+    .DetailsContainer span {
+        color: #646668;
+        font-weight: 400;
+    }
+    
+    .DetailsContainer div {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .Header {
+        display: flex;
+        justify-content: space-between;
+        align-items: last baseline;
+    }
+    
+    .Header button {
+        background-color: transparent;
+        color: #544EEE;
+        font-weight: 700;
+        font-size: 1rem;
+        cursor: pointer;
+    }
+    
+    .EditButton {
+        display: flex;
+        cursor: pointer;
+    }
+
+    .Header button:hover {
+        color: #34319b;
+    }
+    
+    .ReviewItem {
+        display: flex;
+        flex-direction: column;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 8px;
+        background-color: #FFFFFF;
+        border-radius: 20px;
+        padding: 12px 16px;
+        height: auto;
+        width: 37.19vw;
+    }
+    
+    .UserReviewsContainer {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 18px;
+        margin-bottom: 50px;
+    }
+    
+    .UserReviewsContainer p {
+        font-size: 18px;
+        font-weight: 500;
+    }
+    
+    .UserReviewsContainer span {
+        color: #646668;
+        font-weight: 400;
+    }
+    
+    .UserReviewsContainer h3 {
+        font-size: 20px;
+    }
+    
+    .BucketListItem {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 8px;
+        background-color: #FFFFFF;
+        border-radius: 20px;
+        padding: 12px 16px;
+        height: auto; 
+    }
+    
+    .CountryDetailsContainer {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 12px;
+        margin-bottom: 30px;
+        /* min-width: 20vw; */
+    }
+    
+    .CountryDetailsContainer h3 {
+        font-size: 20px;
+        /* font-weight: 500; */
+        width: 21.7vw;
+    }
+    
+    .DeleteFavoriteButton {
+        height: 24px;
+        cursor: pointer;
+    }
+    
+    .BucketListItemEmpty {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        /* text-align: center; */
+        gap: 8px;
+        background-color: #FFFFFF;
+        border-radius: 20px;
+        padding: 12px 16px;
+        height: auto;     
+    }
+    
+    .BucketListItemEmpty p {
+        font-size: 18px;
+        color: #15141B;
+        font-weight: 500;
+    }
 }
