Small changes and tests for different things, but nothing major.

--- a/src/style/home-styles.css
+++ b/src/style/home-styles.css
@@ -198,6 +198,7 @@ h2 {
         margin: 0px 9vw 0 9vw;
         border-radius: 30px;
         background-color: white;
+        width: 25vw;
     }
     
     .RandomCountryImage {
