Updated all the links of icons so that they will display on netlify.

--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -567,6 +567,12 @@ input::placeholder {
         /* justify-content: space-evenly; */
     }
     
+    .TravelLogo {
+        display: flex;
+        /* justify-content: center; */
+        /* align-items: ; */
+    }
+
     .WhiteTravelLogo {
         display: none;
     }
